# ITL_Hero_Shoot

./: .gitignore  README.md
Real/src/bringup/: CMakeLists.txt  package.xml
Real/src/bringup/config/: Simulation.yaml
Real/src/bringup/launch/: Simulation_nav.launch.py  Simulation_slam.launch.py
Real/src/bringup/pcd/: 26UL.pcd
Real/src/bringup/rviz/: nav.rviz
Real/src/control/lob_shot_aiming/: CMakeLists.txt  package.xml
Real/src/control/lob_shot_aiming/include/lob_shot_aiming/: lob_shot_aiming.hpp
Real/src/control/lob_shot_aiming/src/: lob_shot_aiming.cpp
Real/src/control/lob_shot_manager/: CMakeLists.txt  package.xml
Real/src/control/lob_shot_manager/include/lob_shot_manager/: lob_shot_manager_node.hpp
Real/src/control/lob_shot_manager/launch/: lob_shot.launch.py
Real/src/control/lob_shot_manager/src/: lob_shot_manager_node.cpp  main.cpp
Real/src/control/projectile_motion/: CMakeLists.txt  package.xml
Real/src/control/projectile_motion/include/projectile_motion/: gaf_projectile_solver.hpp  gravity_projectile_solver.hpp  iterative_projectile_tool.hpp  projectile_solver_interface.hpp
Real/src/control/projectile_motion/src/: gaf_projectile_solver.cpp  gravity_projectile_solver.cpp  iterative_projectile_tool.cpp
Real/src/description/robot_description/: CMakeLists.txt  package.xml
Real/src/description/robot_description/launch/: robot_description.launch.py
Real/src/description/robot_description/rviz/: visualize_robot.rviz
Real/src/description/robot_description/urdf/: sentry_real.urdf.xacro
Real/src/drivers/livox_ros_driver2/: CMakeLists.txt
Real/src/slam/FAST_LIO/: CMakeLists.txt  package.xml
Real/src/slam/FAST_LIO/Log/: mat_pre.txt
Real/src/slam/FAST_LIO/config/: mid360.yaml
Real/src/slam/FAST_LIO/src/: laserMapping.cpp
Real/src/slam/loam_adapter/: CMakeLists.txt  package.xml
Real/src/slam/loam_adapter/include/loam_adapter/: loam_adapter.hpp
Real/src/slam/loam_adapter/src/: loam_adapter.cpp
Real/src/slam/point_lio/: CMakeLists.txt  package.xml
Real/src/slam/point_lio/config/: mid360.yaml
Real/src/slam/point_lio/rviz_cfg/: loam_livox.rviz
Real/src/slam/point_lio/src/: Estimator.cpp  IMU_Processing.cpp  laserMapping.cpp
Real/src/slam/relocalization/: CMakeLists.txt  package.xml
Real/src/slam/relocalization/include/relocalization/: relocalization.hpp
Real/src/slam/relocalization/src/: relocalization.cpp
Real/src/utils/: CMakeLists.txt  package.xml
Real/src/utils/include/: logger.hpp
Real/src/utils/src/: logger.cpp
Simulation/src/ign_sim_pointcloud_tool/src/: point_cloud_converter.cpp
Simulation/src/pb2025_robot_description/resource/models/mid360/: model.sdf.xmacro
Simulation/src/pb2025_robot_description/resource/xmacro/: simulation_robot.sdf.xmacro
Simulation/src/rmoss_gz_resources/resource/models/rm25_example_robot/: rm25_example_robot.def.xmacro
Simulation/src/rmu_gazebo_simulator/: .pre-commit-config.yaml
Simulation/src/rmu_gazebo_simulator/rmu_gazebo_simulator/: CMakeLists.txt
Simulation/src/rmu_gazebo_simulator/rmu_gazebo_simulator/config/: cloud_converter.yaml  gz_world.yaml
Simulation/src/rmu_gazebo_simulator/rmu_gazebo_simulator/launch/: bringup_sim.launch.py  spawn_robots.launch.py
Simulation/src/rmu_gazebo_simulator/rmu_gazebo_simulator/resource/models/rmuc_2026/: model.config  model.sdf
Simulation/src/rmu_gazebo_simulator/rmu_gazebo_simulator/resource/models/rmul_2026/: model.config  model.sdf
Simulation/src/rmu_gazebo_simulator/rmu_gazebo_simulator/resource/models/rmul_2026/meshes/: rmul_2026.stl
Simulation/src/rmu_gazebo_simulator/rmu_gazebo_simulator/resource/worlds/: rmuc_2026_world.sdf  rmul_2026_world.sdf
Simulation/src/sim_adapter/: package.xml  setup.cfg  setup.py
Simulation/src/sim_adapter/launch/: sim_test.launch.py
Simulation/src/sim_adapter/sim_adapter/: gimbal_feedback_adapter.py  joint_state_adapter.py
scripts/: align_and_pick.py
