<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>utils</name>
  <version>1.0.0</version>
  <description>
    通用工具库，提供ROS2项目中常用的工具类和函数。
  </description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  
  <license>Apache-2.0</license>
  
  <author email="your-email@example.com">Your Name</author>
  
  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fmt</depend>
  <!-- 构建依赖 -->
  <build_depend>rclcpp</build_depend>
  
  <!-- 执行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  
  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <!-- 导出信息 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
