<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lob_shot_aiming</name>
  <version>0.1.0</version>
  <description>LiDAR-assisted lob shot aiming library (TF + ballistic solving)</description>
  <maintainer email="todo@todo.com">guo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>projectile_motion</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
