<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>relocalization</name>
  <version>0.0.1</version>
  <description>GICP-based relocalization: matches real-time scans against prior PCD map, publishes map→odom TF</description>
  <maintainer email="guo@todo.todo">guo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libomp-dev</depend>
  <depend>utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
